--- a/org.openwms.tms/org.openwms.tms.transportation/src/main/resources/i18n.properties
+++ b/org.openwms.tms/org.openwms.tms.transportation/src/main/resources/i18n.properties
@@ -1,6 +1,6 @@
 TMS.TO_WITH_PKEY_NOT_FOUND=No TransportOrder with persisted key [{0}] found
 TMS.TO_STATE_CHANGE_NULL_STATE=New TransportOrder's state may not be NULL. Persisted key of the TransportOrder [{0}]
 TMS.TO_STATE_CHANGE_BACKWARDS_NOT_ALLOWED=Turning back the state of the TransportOrder is not allowed. Persisted key of the TransportOrder [{0}]
-TMS.TO_STATE_CHANGE_NOT_READY=A new TransportOrder must first be INITIALIZED or can be CANCELED. Persisted key of the TransportOrder [{0}]
+TMS.TO_STATE_CHANGE_NOT_READY=A new TransportOrder must first be INITIALIZED or may get CANCELED but cannot be turned into [{0}]. Persisted key of the TransportOrder [{1}]
 TMS.START_TO_NOT_ALLOWED_ALREADY_STARTED_ONE=A started TransportOrder with Barcode [{0}] already exists, hence the TransportOrder with persisted key [{1}] cannot be started
 TMS.STATE_CHANGE_ERROR_FOR_INITIALIZED_TO=An initialized TransportOrder may only be set to STARTED, CANCELED or ONFAILURE. Persisted key of the TransportOrder [{0}]
