--- a/docs/_data/topnav.yml
+++ b/docs/_data/topnav.yml
@@ -13,7 +13,7 @@ topnav_dropdowns:
     - title: Functional Components
       folderitems:
         - title: CORE User Account and Authentication (UAA) Services
-          url: org.openwms.core/uaa
+          url: org.openwms.core\/uaa
         - title: CORE Configuration Services
           url: http://idratherbewriting.com/category-jekyll/
         - title: CORE Internationalisation and Localisation Services
@@ -23,7 +23,7 @@ topnav_dropdowns:
         - title: COMMON TCP/IP Communication Driver
           url: https://talk.jekyllrb.com
         - title: TMS Transportation Services
-          url: http://jekyllrb.com/docs/home/
+          url: org.openwms.tms\/org.openwms.tms.transportation/component.html
     - title: Documentation
       folderitems:
         - title: OpenWMS.org User Documentation 2.x
