--- a/docs/_data/topnav.yml
+++ b/docs/_data/topnav.yml
@@ -23,10 +23,13 @@ topnav_dropdowns:
         - title: COMMON TCP/IP Communication Driver
           url: https://talk.jekyllrb.com
         - title: TMS Transportation Services
-          url: org.openwms.tms\/org.openwms.tms.transportation\/component.html
+          url: tms\/transportation\/component.html
     - title: Documentation
       folderitems:
         - title: OpenWMS.org User Documentation 2.x
           url: /mydoc_introduction.html
         - title: OpenWMS.org User Documentation 1.x
           url: /mydoc_introduction.html
+
+
+https://github.com/openwms/org.openwms/blob/master/org.openwms.tms/org.openwms.tms.transportation/docs/component.md
