--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ before_script:
 - npm install -g bower
 install: mvn clean install site site:deploy --settings=./etc/ci/settings.xml -U -Prelease -Denforcer.skip=true -Dci.buildNumber=$TRAVIS_BRANCH-$TRAVIS_BUILD_NUMBER
   -Ddocumentation.dir=$TRAVIS_BUILD_DIR
+branches:
+  only:
+    - /.*/
 env:
   global:
     secure: FcpmWXdR7VgNoG6Q8Oga+HvteAc55EPz8VjTBNF9EruGqq2/Uk23Hftva8RaWl4EVB//05TUVjLvmKosmZG1qnijZTbU9MZYnIqk/C6aNC0iHamBEaoDNdow3fHBbWhEr2KpBsD30r+ZrhK33uq1rg+eA+GVAlQlunG/oAzwEEs=
