--- a/docs/_data/glossary.yml
+++ b/docs/_data/glossary.yml
@@ -9,3 +9,19 @@ haughty: "Proud and flaunting it. Holding your head high up like a snooty, too-g
 impertinent: "Someone acting rude and insensitive to others."
 
 intrepid: "Brave and courageous especially in a difficult, dangerous situation."
+
+TransportUnit: "A TransportUnit is an item like a box, a toad, a bin or a palette that is moved around within a warehouse and can carry goods. Used as container to transport items like LoadUnits. It can be moved between Locations."
+
+TransportUnits: "See TransportUnit."
+
+Location: "A Location, represents a physical or virtual place in a warehouse. Could be something like a storage location in the stock or a location on a conveyor. Error locations can be modeled with a Location entity, too. Multiple Locations are grouped to a LocationGroup."
+
+Locations: "See Location."
+
+LocationGroup: "A LocationGroup is a logical group of Locations, grouping together Locations with same characteristics."
+
+LocationGroups: "See LocationGroup."
+
+LoadUnit: "A LoadUnit is used to divide a TransportUnit into physical areas. It is used for separation concerns only and cannot be transported without a TransportUnit."
+
+LoadUnits: "See LoadUnit."
