worked on automatic generation and upload of Javadocs to Github as part of the jekyll site deployment

--- a/org.openwms.common/pom.xml
+++ b/org.openwms.common/pom.xml
@@ -35,6 +35,7 @@
     <packaging>pom</packaging>
     <name>OpenWMS.org COMMON</name>
     <properties>
+        <ms.group>common</ms.group>
         <moduleDir>../..</moduleDir>
         <core.version>${project.version}</core.version>
         <maven.test.skip>false</maven.test.skip>
