--- a/org.openwms.core/pom.xml
+++ b/org.openwms.core/pom.xml
@@ -36,6 +36,7 @@
     <name>OpenWMS.org CORE</name>
     <description>The CORE project Maven POM file. Just a common definition of dependencies valid for all other CORE projects. Call mvn install -Pcore to build all CORE projects.</description>
     <properties>
+        <ms.group>core</ms.group>
         <moduleDir>../..</moduleDir>
     </properties>
 
