--- a/org.openwms.wms/pom.xml
+++ b/org.openwms.wms/pom.xml
@@ -34,6 +34,7 @@
     <packaging>pom</packaging>
     <name>OpenWMS.org WMS</name>
     <properties>
+        <ms.group>wms</ms.group>
         <moduleDir>../..</moduleDir>
         <maven.test.skip>true</maven.test.skip>
         <app.version>1.1.0-SNAPSHOT</app.version>
