Generate Javadocs into docs/ and commit /docs to publishing branch gh-pages

--- a/org.openwms.common/org.openwms.common.comm/pom.xml
+++ b/org.openwms.common/org.openwms.common.comm/pom.xml
@@ -33,7 +33,7 @@
     <artifactId>org.openwms.common.comm</artifactId>
     <name>${project.artifactId}</name>
     <properties>
-        <moduleDir>../../..</moduleDir>
+        <moduleDir>../..</moduleDir>
     </properties>
 
     <dependencies>
