--- a/org.openwms.common/org.openwms.common.shared/pom.xml
+++ b/org.openwms.common/org.openwms.common.shared/pom.xml
@@ -33,7 +33,7 @@
     <artifactId>org.openwms.common.shared</artifactId>
     <name>${project.artifactId}</name>
     <properties>
-        <moduleDir>../../..</moduleDir>
+        <moduleDir>../..</moduleDir>
     </properties>
 
         <dependencies>
