--- a/docs/_data/definitions.yml
+++ b/docs/_data/definitions.yml
@@ -1,9 +1,15 @@
-elephant: "This is a sample definition."
+TransportUnit: "A TransportUnit is an item like a box, a toad, a bin or a palette that is moved around within a warehouse and can carry goods. Used as container to transport items like LoadUnits. It can be moved between Locations."
 
-baseball: "Baseball is considered America's pasttime sport, though that may be more of a historical term than a current one. There's a lot more excitement about football than baseball. A baseball game is somewhat of a snooze to watch, for the most part."
+TransportUnits: "See TransportUnit."
 
-basketball: "Basketball is a sport involving two teams of five players each competing to put a ball through a small circular rim 10 feet above the ground. Basketball requires players to be in top physical condition, since they spend most of the game running back and forth along a 94-foot-long floor."
+Location: "A Location, represents a physical or virtual place in a warehouse. Could be something like a storage location in the stock or a location on a conveyor. Error locations can be modeled with a Location entity, too. Multiple Locations are grouped to a LocationGroup."
 
-football: "No doubt the most fun sport to watch, football also manages to accrue the most injuries with the players. From concussions to blown knees, football players have short sport lives."
+Locations: "See Location."
 
-soccer: "If there's one sport that dominates the world landscape, it's soccer. However, US soccer fans are few and far between. Apart from the popularity of soccer during the World Cup, most people don't even know the name of the professional soccer organization in their area."
+LocationGroup: "A LocationGroup is a logical group of Locations, grouping together Locations with same characteristics."
+
+LocationGroups: "See LocationGroup."
+
+LoadUnit: "A LoadUnit is used to divide a TransportUnit into physical areas. It is used for separation concerns only and cannot be transported without a TransportUnit."
+
+LoadUnits: "See LoadUnit."
