--- a/docs/_data/sidebars/mydoc_sidebar.yml
+++ b/docs/_data/sidebars/mydoc_sidebar.yml
@@ -20,94 +20,62 @@ entries:
       type: frontmatter
 
   - title: Overview
-    output: web, pdf
+    output: web
     folderitems:
 
     - title: Introduction
       url: /index.html
-      output: web, pdf
+      output: web
       type: homepage
 
     - title: Team
-      url: /mydoc_introduction.html
-      output: web, pdf
+      url: /index.html
+      output: web
 
     - title: Development
-      url: /mydoc_supported_features.html
-      output: web, pdf
+      url: /index.html
+      output: web
 
     - title: Concept
-      url: /mydoc_about.html
-      output: web, pdf
+      url: /index.html
+      output: web
 
   - title: Release Notes
-    output: web, pdf
+    output: web
     folderitems:
 
     - title: 2.0 Release notes
-      url: /mydoc_release_notes_60.html
-      output: web, pdf
+      url: /index.html
+      output: web
 
     - title: 1.0 Release notes
-      url: /mydoc_release_notes_50.html
-      output: web, pdf
+      url: /index.html
+      output: web
 
   - title: Installation
-    output: web, pdf
+    output: web
     folderitems:
 
     - title: Download
-      url: /mydoc_install_jekyll_on_windows.html
-      output: web, pdf
+      url: /index.html
+      output: web
 
     - title: Install On Premise
-      url: /mydoc_about_ruby_gems_etc.html
-      output: web, pdf
+      url: /index.html
+      output: web
 
     - title: Install On Cloud
-      url: /mydoc_install_jekyll_on_mac.html
-      output: web, pdf
+      url: /index.html
+      output: web
 
     - title: Database
-      url: /mydoc_install_jekyll_on_windows.html
-      output: web, pdf
+      url: /index.html
+      output: web
 
   - title: Statistics
-    output: web, pdf
-
-    folderitems:
-    - title: Pages
-      url: /mydoc_pages.html
-      output: web, pdf
-
-    - title: Posts
-      url: /mydoc_posts.html
-      output: web, pdf
-
-    - title: Lists
-      url: /mydoc_lists.html
-      output: web, pdf
-
-    - title: Conditional logic
-      url: /mydoc_conditional_logic.html
-      output: web, pdf
-
-    - title: Content reuse
-      url: /mydoc_content_reuse.html
-      output: web, pdf
-
-    - title: Collections
-      url: /mydoc_collections.html
-      output: web, pdf
-
-    - title: WebStorm editor tips
-      url: /mydoc_webstorm_text_editor.html
-      output: web, pdf
-
-    - title: Atom editor tips
-      url: /mydoc_atom_text_editor.html
-      output: web, pdf
+    output: web
+    url: /index.html
 
   - title: Demo
-    url: /mydoc_sidebar_navigation.html
-    output: web, pdf
+    url: /index.html
+    output: web
