--- a/pom.xml
+++ b/pom.xml
@@ -484,6 +484,7 @@
         <!-- Spring Integration 2.2.4 uses Spring Core 3.1.3 -->
         <!--spring.io.version>2.1.0.BUILD-SNAPSHOT</spring.io.version-->
         <spring-boot.version>1.4.0.RELEASE</spring-boot.version> <!-- Keep in sync with platform -->
+        <spring-cloud-dependencies.version>Brixton.SR5</spring-cloud-dependencies.version>
         <spring.version>4.3.2.RELEASE</spring.version> <!-- Keep in sync with boot -->
         <start-class></start-class> <!-- keep it empty, set by actual boot module -->
         <validation-api.version>1.1.0.Final</validation-api.version>
@@ -892,7 +893,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Brixton.BUILD-SNAPSHOT</version>
+                <version>${spring-cloud-dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
