--- a/pom.xml
+++ b/pom.xml
@@ -877,13 +877,6 @@
             </dependency>
 
             <!-- Spring Framework Libraries -->
-            <!--dependency>
-                <groupId>io.spring.platform</groupId>
-                <artifactId>platform-bom</artifactId>
-                <version>${spring.io.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -939,6 +932,23 @@
                 <artifactId>oracle.jdbc.driver</artifactId>
                 <version>${jdbc.oracle.version}</version>
                 <optional>true</optional>
+            </dependency>
+
+            <!-- Fix version here -->
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjrt</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjtools</artifactId>
+                <version>${aspectj.version}</version>
             </dependency>
 
             <!-- REST dependencies -->
