--- a/org.openwms.common/org.openwms.common.service/src/main/resources/i18n.properties
+++ b/org.openwms.common/org.openwms.common.service/src/main/resources/i18n.properties
@@ -1,2 +1,4 @@
-COMMON.BARCODE_NOT_FOUND=No TransportUnit with Barcode [{0}] found
-COMMON.LOCATION_GROUP_NOT_FOUND=No LocationGroup with name [{0}] found
+COMMON.BARCODE_NOT_FOUND=TransportUnit with Barcode [{0}] not found
+COMMON.LOCATION_NOT_FOUND=Location with name [{0}] not found
+COMMON.LOCATION_GROUP_NOT_FOUND=LocationGroup with name [{0}] not found
+COMMON.TRANSPORT_UNIT_TYPE_NOT_FOUND=TransportUnit with name [{0}] not found
