--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,7 @@ node_js:
 - '0.10'
 before_script:
 - npm install -g bower
-install: mvn clean install --settings=./etc/ci/settings.xml -Prelease -Dci.buildNumber=$TRAVIS_BRANCH-$TRAVIS_BUILD_NUMBER
-  -Ddocumentation.dir=$TRAVIS_BUILD_DIR
-branches:
-  only:
-    - /.*/
+script: mvn clean install --settings=./etc/ci/settings.xml -Prelease -Dci.buildNumber=$TRAVIS_BRANCH-$TRAVIS_BUILD_NUMBER -Ddocumentation.dir=$TRAVIS_BUILD_DIR
 env:
   global:
     secure: FcpmWXdR7VgNoG6Q8Oga+HvteAc55EPz8VjTBNF9EruGqq2/Uk23Hftva8RaWl4EVB//05TUVjLvmKosmZG1qnijZTbU9MZYnIqk/C6aNC0iHamBEaoDNdow3fHBbWhEr2KpBsD30r+ZrhK33uq1rg+eA+GVAlQlunG/oAzwEEs=
