--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,14 @@ jdk:
 node_js:
 - '0.8'
 - '0.10'
+
+install: true
+
 before_script:
 - npm install -g bower
+
 script: mvn clean install --settings=./etc/ci/settings.xml -Prelease -Dci.buildNumber=$TRAVIS_BRANCH-$TRAVIS_BUILD_NUMBER
+
 env:
   global:
     secure: FcpmWXdR7VgNoG6Q8Oga+HvteAc55EPz8VjTBNF9EruGqq2/Uk23Hftva8RaWl4EVB//05TUVjLvmKosmZG1qnijZTbU9MZYnIqk/C6aNC0iHamBEaoDNdow3fHBbWhEr2KpBsD30r+ZrhK33uq1rg+eA+GVAlQlunG/oAzwEEs=
