--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
 language: java
 jdk:
-- oraclejdk8
+  - oraclejdk8
 node_js:
-- '0.8'
-- '0.10'
+  - '0.8'
+  - '0.10'
 
 install: true
 
 before_script:
-- npm install -g bower
+  - npm install -g bower
 
-script: mvn clean install --settings=./etc/ci/settings.xml -Prelease -Dci.buildNumber=$TRAVIS_BRANCH-$TRAVIS_BUILD_NUMBER
+script:
+  - mvn clean install --settings=./etc/ci/settings.xml -Prelease -Dci.buildNumber=$TRAVIS_BRANCH-$TRAVIS_BUILD_NUMBER -Ddocumentation.dir=$TRAVIS_BUILD_DIR
 
 env:
   global:
