--- a/org.openwms.core/org.openwms.core.util/pom.xml
+++ b/org.openwms.core/org.openwms.core.util/pom.xml
@@ -35,6 +35,7 @@
     <description>A project that contains utility classes, exception types, common event types that are used by all other projects.</description>
     <properties>
         <moduleDir>../..</moduleDir>
+        <enforcer.skip>true</enforcer.skip>
     </properties>
     <dependencies>
         <!-- Spring Framework -->
